# foctet

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: rust.yml
devcert/: .gitignore  generate.ps1  generate.sh  openssl.conf
docs/: http-body-format.md
foctet/: Cargo.toml
foctet-archive/: Cargo.toml
foctet-archive/src/: build.rs  codec.rs  crypto.rs  error.rs  lib.rs  limits.rs  single.rs  split.rs  types.rs
foctet-archive/tests/: oom_regression.rs  parser_prop.rs
foctet-core/: Cargo.toml
foctet-core/src/: body.rs  control.rs  crypto.rs  frame.rs  io.rs  lib.rs  payload.rs  replay.rs  secure_channel.rs  session.rs
foctet-core/tests/: body_parser_prop.rs  parser_prop.rs
foctet-http/: Cargo.toml
foctet-http/src/: axum.rs  lib.rs  workers.rs
foctet-transport/: Cargo.toml
foctet-transport/examples/: muxtls_split.rs  quinn_split.rs  websock_split.rs  webtrans_split.rs
foctet-transport/src/: lib.rs
foctet/examples/: e2ee_tcp_relay_sync.rs  e2ee_tcp_relay_tokio.rs  e2ee_tcp_sync.rs  e2ee_tokio_stream.rs  file_archive_roundtrip.rs  file_archive_roundtrip_tokio.rs  gen_vectors.rs  secure_channel_sync.rs  secure_channel_tokio.rs
foctet/src/: lib.rs
foctet/tests/: test_vector_schema.rs  test_vectors.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: archive_parser.rs  frame_parser.rs
interop/: README.md  minimal_decoder.js  minimal_decoder.ts
test-vectors/: README.md  archive-v0.json  frame-v0.json  handshake-v0.json
